# Design-Patterns

./: .gitignore  CMakeLists.txt  README.md  clang-format.sh
Adapter/: CMakeLists.txt
Adapter/include/Adapter/: MallardDuck.h  TurkeyAdapter.h  WildTurkey.h
Adapter/src/: DuckTestDrive.cpp  MallardDuck.cpp  TurkeyAdapter.cpp  WildTurkey.cpp
Command/: CMakeLists.txt
Decorator/include/: Beverage.h  CondimentDecorator.h  DarkRoast.h  Decaf.h  Mocha.h
Decorator/src/: DarkRoast.cpp  Decaf.cpp  Espresso.cpp  Soy.cpp  StarbuzzCoffee.cpp
Facade/: CMakeLists.txt
Factory/: CMakeLists.txt
Factory/include/: PizzaStore.h  SimplePizzaFactory.h
Factory/include/Factory/: CheesePizza.h  ClamPizza.h  PepperoniPizza.h  PizzaStore.h  SimplePizzaFactory.h  VeggiePizza.h
Factory/src/: CheesePizza.cpp  ClamPizza.cpp  PepperoniPizza.cpp  Pizza.cpp  PizzaStore.cpp  PizzaTestDrive.cpp  SimplePizzaFactory.cpp  VeggiePizza.cpp
Head-First-Design-Patterns-C++/Decorator/: CMakeLists.txt
Head-First-Design-Patterns-C++/Decorator/include/: Espresso.h  Milk.h  Soy.h  Whip.h
Head-First-Design-Patterns-C++/Decorator/src/: Beverage.cpp  Whip.cpp
Head-First-Design-Patterns-C++/Observer/: CMakeLists.txt
Head-First-Design-Patterns-C++/Observer/include/: HeatIndexDisplay.h
Head-First-Design-Patterns-C++/Observer/src/: HeatIndexDisplay.cpp  StatisticsDisplay.cpp  WeatherStation.cpp
Head-First-Design-Patterns-C++/Singleton/: CMakeLists.txt
Head-First-Design-Patterns-C++/Singleton/include/: Singleton.h
Head-First-Design-Patterns-C++/Singleton/src/: Singleton.cpp
Head-First-Design-Patterns-C++/State/: CMakeLists.txt
Head-First-Design-Patterns-C++/Strategy/: CMakeLists.txt
Head-First-Design-Patterns-C++/Strategy/include/: DecoyDuck.h  FlyWithWings.h  ModelDuck.h
Head-First-Design-Patterns-C++/Strategy/src/: FlyRocketPowered.cpp  MallardDuck.cpp  RubberDuck.cpp  Squeak.cpp
Head-First-Design-Patterns-C++/TemplateMethod/: CMakeLists.txt
Head-First-Design-Patterns[C++]/Adapter/: CMakeLists.txt
Head-First-Design-Patterns[C++]/Decorator/include/: HouseBlend.h
Head-First-Design-Patterns[C++]/Decorator/src/: HouseBlend.cpp  Milk.cpp  Mocha.cpp
Head-First-Design-Patterns[C++]/Observer/include/: CurrentConditionsDisplay.h  DisplayElement.h  ForecastDisplay.h
Head-First-Design-Patterns[C++]/Observer/src/: CurrentConditionsDisplay.cpp  WeatherData.cpp
Head-First-Design-Patterns[C++]/Singleton/: CMakeLists.txt
Head-First-Design-Patterns[C++]/Singleton/include/: Singleton.h
Head-First-Design-Patterns[C++]/Singleton/src/: Singleton.cpp
Head-First-Design-Patterns[C++]/Strategy/include/: Duck.h  FlyBehaviour.h  MuteQuack.h  QuackBehaviour.h  RubberDuck.h
Head-First-Design-Patterns[C++]/Strategy/src/: DecoyDuck.cpp  MuteQuack.cpp
Observer/: CMakeLists.txt
Observer/include/: StatisticsDisplay.h  WeatherData.h
Observer/src/: ForecastDisplay.cpp
Singleton/: CMakeLists.txt
Singleton/include/Singleton/: Singleton.h
Singleton/src/: Singleton.cpp  SingletonClient.cpp
State/: CMakeLists.txt
State/include/State/: GumballMachine.h  HasQuarterState.h  NoQuarterState.h  SoldOutState.h  SoldState.h
State/src/: GumballMachine.cpp  GumballMachineTestDrive.cpp  HasQuarterState.cpp  NoQuarterState.cpp  SoldOutState.cpp  SoldState.cpp
Strategy/: CMakeLists.txt
Strategy/include/: Duck.h  FlyBehaviour.h  FlyNoWay.h  FlyRocketPowered.h  MallardDuck.h  Quack.h  QuackBehaviour.h  RedheadDuck.h  Squeak.h
Strategy/src/: DecoyDuck.cpp  Duck.cpp  FlyNoWay.cpp  FlyRocketPowered.cpp  FlyWithWings.cpp  MallardDuck.cpp  MiniDuckSimulator.cpp  ModelDuck.cpp  MuteQuack.cpp  Quack.cpp  RedheadDuck.cpp  RubberDuck.cpp  Squeak.cpp
TemplateMethod/: CMakeLists.txt
TemplateMethod/include/TemplateMethod/: Coffee.h  Tea.h
TemplateMethod/src/: BeverageTestDrive.cpp  CaffeineBeverage.cpp  Coffee.cpp  Tea.cpp
